--- a/.env
+++ b/.env
@@ -33,6 +33,6 @@ TRAEFIK_IMAGE=traefik:v2.2.0-windowsservercore-1809
 TRAEFIK_ISOLATION=hyperv
 ISOLATION=default
 
-TDS_OWNER=
-TDS_KEY=
+TDS_OWNER=Avanade
+TDS_KEY=abfx-gn1-xyq-blxx
 MEDIA_REQUEST_PROTECTION_SHARED_SECRET=
